wifi: removed big testcases, changed constrains

--- a/wifi/problem_statement/problem.fr.tex
+++ b/wifi/problem_statement/problem.fr.tex
@@ -14,7 +14,7 @@ c'est votre devoir d'assigner les antennes au client !.
 \begin{Input}
     l'entrée consiste en:
     \begin{itemize}
-        \item Une ligne avec deux entiers $n, q$ ($0\leq n, q\leq 2 \cdot 10^5$), la taille de la liste ainsi que le nombre de requêtes.
+        \item Une ligne avec deux entiers $n, q$ ($0\leq n, q\leq 10^5$), la taille de la liste ainsi que le nombre de requêtes.
         \item Une ligne avec $n$ entiers $a_i$ ($0  \leq a_i \leq 10^{18}$), la position des antennes.
         \item $q$ lignes avec un entier $p$ ($0 \leq p \leq 10^{18}$). La position du client.
     \end{itemize}
