wifi : spelling correction

--- a/wifi/problem_statement/problem.fr.tex
+++ b/wifi/problem_statement/problem.fr.tex
@@ -7,12 +7,12 @@
 
 \newcommand{\maxa}{123456789}
 
-En tant qu'opérateur téléphonique vous devez êtres les plus performant et battre vos adversaires Koodo, Airtel, Rogers, Wind et AT\&T. Pour ce faire il faut que votre réseaux téléphonique soit le plus rapide possible. Votre réseau est composé de nombreuses antennes réparties sur un territoire. Lorsqu’un client souhaite se connecter à Internet, il est impératif de lui assigner l’antenne la plus proche pour garantir une connexion rapide et efficace. Par soucis d'éfficacitée, toutes les antennes sont allignés sur un seul axe.
+En tant qu'opérateur téléphonique, vous devez être les plus performant et battre vos adversaires Koodo, Airtel, Rogers,Wind et AT\&T. Afin de réaliser à bien cette mission, il faut que votre réseau téléphonique soit le plus rapide possible. Votre réseau est composé de nombreuses antennes réparties sur un territoire. Lorsqu'un client souhaite se connecter à Internet, il est impératif de lui assigner l'antenne la plus proche pour garantir une connexion rapide et efficace. Par souci d'efficacitée, toutes les antennes sont allignées sur un seul axe.
 
-c'est votre devoir d'assigner les antennes au client !.
+C'est votre devoir d'assigner les antennes au client !.
 
 \begin{Input}
-    l'entrée consiste en:
+    L'entrée consiste en:
     \begin{itemize}
         \item Une ligne avec deux entiers $n, q$ ($0\leq n, q\leq 10^5$), la taille de la liste ainsi que le nombre de requêtes.
         \item Une ligne avec $n$ entiers $a_i$ ($0  \leq a_i \leq 10^{18}$), la position des antennes.
