--- a/wifi/problem_statement/solution.fr.tex
+++ b/wifi/problem_statement/solution.fr.tex
@@ -1,20 +1,29 @@
 \begin{frame}
     \frametitle{\problemtitle}
     \begin{block}{Problème}
-        On a une liste des n antennes, trouver la position de l'antenne la plus proche pour chaque query.
+        On a une liste $a$, des n antennes, trouver la position de l'antenne la plus proche pour chaque query.
     \end{block}
     \pause
     \textbf{Solution Naïve} : Pour chaque query traverser la liste pour trouver quelle antenne est la plus proche.
     \pause
      $\mathcal{O}$(n $\times$ q) $\mapsto$ TLE.\\
      \pause
-     \begin{block}{Solution}
+     \begin{block}{Solution (Online queries)}
         \begin{itemize}
             \item<+-> Trier les antennes.
             \item<+-> Pour chaque query on lance une binary search (recherche dichotomique) pour trouver l'antenne la plus proche.
         \end{itemize}
         \pause
         \textbf{Complexitée} : $\mathcal{O}(n \log n + q\log n)$
+    \end{block}
+    \pause
+    \begin{block}{Solution alternative (Offline queries)}
+            \begin{itemize}
+                \item Trier la liste des antennes et trier les queries.
+                \item Parcourir la liste des antennes tout en gardant un offset dans les queries.
+            \end{itemize}
+            \pause
+            \textbf{Complexitée} : $\mathcal{O}(n \log n + q\log q)$
     \end{block}
     % \solvestats
 \end{frame}
