--- a/wifi/problem_statement/problem.fr.tex
+++ b/wifi/problem_statement/problem.fr.tex
@@ -18,6 +18,7 @@ C'est votre devoir d'assigner les antennes au client !.
         \item Une ligne avec $n$ entiers $a_i$ ($0  \leq a_i \leq 10^{18}$), la position des antennes.
         \item $q$ lignes avec un entier $p$ ($0 \leq p \leq 10^{18}$). La position du client.
     \end{itemize}
+    Il est garanti que chaque antenne à une position unique !
 \end{Input}
 
 \begin{Output}
