war: changed form of text & added image

--- a/second_sino_japanese_war/problem_statement/problem.fr.tex
+++ b/second_sino_japanese_war/problem_statement/problem.fr.tex
@@ -1,8 +1,16 @@
 \problemname{Second Sino-Japanese War}
 
+\illustration{0.3}{map.jpg}{}
+
 \newcommand{\maxa}{123456789}
 
-Notre histoire se passe pendant la seconde guerre sino-japonaise en 1937, qui opposa le Kuomintang et le Parti communiste chinois, alors en guerre civile depuis 10 ans, à l’empire du Japon. Cette guerre se déroula 6 ans après l’invasion de la Mandchourie par l’Armée impériale du Japon. Ce dernier, voulant poursuivre sa politique expansionniste en Chine, et était optimiste quant à ses chances de terminer le conflit rapidement. Pour y parvenir, le 7 juillet 1937, l’incident du pont Marco Polo fournit au Japon un prétexte pour ouvrir les hostilités. L’empereur du Japon, Hirohito, donna son accord à l’invasion du reste du territoire chinois. Suite à cela, les forces chinoises unifiées subirent une série de désastres dans le Nord du pays. L’état-major japonais décida également d’envahir la ville de Shanghai, située sur la côte Est de la Chine, ville stratégique grâce à son accès à la mer et à son développement plus important que celui des autres villes chinoises, pour accélérer la fin du conflit. À partir du 23 août, les troupes amphibies japonaises commencèrent à débarquer massivement sur les côtes chinoises près de Shanghai. C’est là que vous entrez en jeu : vous êtes un général chinois ayant obtenu ce poste grâce à vos liens avec des politiciens et des amis haut placés, une situation très récurrente dans les forces armées chinoises, en proie à la corruption et au népotisme. Vous êtes à la tête d’un corps d’armée parti de Shanghai, qui est sous-entraîné et sous-armé, et qui a pour but de ralentir l’avancée japonaise avant qu’elle n’atteigne Shanghai, afin que les troupes qui s’y trouvent puissent terminer la défense de la ville. Les Japonais disposent d’une plus grande puissance de feu, ainsi que d’un soutien naval et aérien important. Votre stratégie repose sur le nombre d’hommes que vous avez, bien supérieur à celui des Japonais, pour compenser l’infériorité de votre armée au niveau de l’armement. La région de Shanghai est composée de villes et de villages. Le but est, à partir d’une ville initiale, d’attendre l’offensive japonaise, de battre en retraite lorsque l’armée japonaise arrive, en parcourant les villes et villages voisins, pour ensuite revenir à la ville initiale et contre-attaquer l’armée japonaise, qui est alors désordonnée et dispersée. Cette stratégie va permettre de mettre en valeur l’avantage numérique de votre armée. Vous disposez pour cela d’une carte avec des villes et villages situés entre la côte et la ville de Shanghai, avec des routes entre les villes qui peuvent être empruntées dans une ou dans les deux directions. Certaines villes et villages sont marqués, indiquant qu’ils sont favorables à une contre-attaque pour votre stratégie et sont donc des candidats pour devenir la ville initiale. Il est important de noter que plus le nombre de villes et villages à parcourir est élevé, plus vous allez perdre d’hommes lorsque vous allez battre en retraite. Vous devez donc trouver une ville efficace pour votre contre-attaque, qui fera perdre le moins d’hommes possible. A noter qu'il faut traverser au moins une ville autre que la ville candidate.
+Notre histoire se passe pendant la seconde guerre sino-japonaise en 1937, qui opposa le Kuomintang et le Parti communiste chinois, alors en guerre civile depuis 10 ans, à l’empire du Japon. Cette guerre se déroula 6 ans après l’invasion de la Mandchourie par l’Armée impériale du Japon. Ce dernier, voulant poursuivre sa politique expansionniste en Chine, et était optimiste quant à ses chances de terminer le conflit rapidement. Pour y parvenir, le 7 juillet 1937, l’incident du pont Marco Polo fournit au Japon un prétexte pour ouvrir les hostilités. L’empereur du Japon, Hirohito, donna son accord à l’invasion du reste du territoire chinois. Suite à cela, les forces chinoises unifiées subirent une série de désastres dans le Nord du pays. L’état-major japonais décida également d’envahir la ville de Shanghai, située sur la côte Est de la Chine, ville stratégique grâce à son accès à la mer et à son développement plus important que celui des autres villes chinoises, pour accélérer la fin du conflit. À partir du 23 août, les troupes amphibies japonaises commencèrent à débarquer massivement sur les côtes chinoises près de Shanghai.
+
+C’est là que vous entrez en jeu : vous êtes un général chinois ayant obtenu ce poste grâce à vos liens avec des politiciens et des amis haut placés, une situation très récurrente dans les forces armées chinoises, en proie à la corruption et au népotisme.
+Vous êtes à la tête d’un corps d’armée parti de Shanghai, qui est sous-entraîné et sous-armé, et qui a pour but de ralentir l’avancée japonaise avant qu’elle n’atteigne Shanghai, afin que les troupes qui s’y trouvent puissent terminer la défense de la ville.
+Les Japonais disposent d’une plus grande puissance de feu, ainsi que d’un soutien naval et aérien important.
+Votre stratégie repose sur le nombre d’hommes que vous avez, bien supérieur à celui des Japonais, pour compenser l’infériorité de votre armée au niveau de l’armement.
+La région de Shanghai est composée de villes et de villages. Le but est, à partir d’une ville initiale, d’attendre l’offensive japonaise, de battre en retraite lorsque l’armée japonaise arrive, en parcourant les villes et villages voisins, pour ensuite revenir à la ville initiale et contre-attaquer l’armée japonaise, qui est alors désordonnée et dispersée. Cette stratégie va permettre de mettre en valeur l’avantage numérique de votre armée. Vous disposez pour cela d’une carte avec des villes et villages situés entre la côte et la ville de Shanghai, avec des routes entre les villes qui peuvent être empruntées dans les deux directions. Certaines villes et villages sont marqués, indiquant qu’ils sont favorables à une contre-attaque pour votre stratégie et sont donc des candidats pour devenir la ville initiale. Il est important de noter que plus le nombre de villes et villages à parcourir est élevé, plus vous allez perdre d’hommes lorsque vous allez battre en retraite. Vous devez donc trouver une ville efficace pour votre contre-attaque, qui fera perdre le moins d’hommes possible. A noter qu'il faut traverser au moins une ville autre que la ville candidate.
 
 \begin{Input}
     L'entrée consiste en:
