--- a/second_sino_japanese_war/problem_statement/problem.fr.tex
+++ b/second_sino_japanese_war/problem_statement/problem.fr.tex
@@ -17,7 +17,7 @@ La région de Shanghai est composée de villes et de villages. Le but est, à pa
     \begin{itemize}
         \item Une ligne avec trois entiers $n, m, p$ ($0\leq n, m\leq 300$) ($0 \leq p \leq \frac{n (n-1)}{2}$), le nombre de villes, le nombre de villes candidates et le nombre de chemins.
         \item Une ligne avec $m$ entiers $m_i$ ($0 \leq m \leq n$), les villes candidates.
-        \item $p$ lignes avec deux entiers $u$, $v$ ($0 \leq u, v \leq n), un chemin allant de la ville u à la ville v.
+        \item $p$ lignes avec deux entiers $u$, $v$ ($0 \leq u, v \leq n$), un chemin allant de la ville u à la ville v.
     \end{itemize}
 \end{Input}
 
