war: fix solutions + output validator + changed statement + added partial solution slides

--- a/second_sino_japanese_war/problem_statement/problem.fr.tex
+++ b/second_sino_japanese_war/problem_statement/problem.fr.tex
@@ -22,5 +22,5 @@ La région de Shanghai est composée de villes et de villages. Le but est, à pa
 \end{Input}
 
 \begin{Output}
-    La ville initiale correspond au mieux à la stratégie. Si 2 villes sont équivalentes, c'est-à-dire qu'il y a le même nombre de villes que l'on doit traverser, alors sélectionnez une des deux.
+    Les ville initiales qui correspondent au mieux à la stratégie.
 \end{Output}
