--- a/second_sino_japanese_war/problem_statement/problem.fr.tex
+++ b/second_sino_japanese_war/problem_statement/problem.fr.tex
@@ -8,19 +8,28 @@ Notre histoire se passe pendant la seconde guerre sino-japonaise en 1937, qui op
 
 C’est là que vous entrez en jeu : vous êtes un général chinois ayant obtenu ce poste grâce à vos liens avec des politiciens et des amis haut placés, une situation très récurrente dans les forces armées chinoises, en proie à la corruption et au népotisme.
 Vous êtes à la tête d’un corps d’armée parti de Shanghai, qui est sous-entraîné et sous-armé, et qui a pour but de ralentir l’avancée japonaise avant qu’elle n’atteigne Shanghai, afin que les troupes qui s’y trouvent puissent terminer la défense de la ville.
+
 Les Japonais disposent d’une plus grande puissance de feu, ainsi que d’un soutien naval et aérien important.
-Votre stratégie repose sur le nombre d’hommes que vous avez, bien supérieur à celui des Japonais, pour compenser l’infériorité de votre armée au niveau de l’armement.
-La région de Shanghai est composée de villes et de villages. Le but est, à partir d’une ville initiale, d’attendre l’offensive japonaise, de battre en retraite lorsque l’armée japonaise arrive, en parcourant les villes et villages voisins, pour ensuite revenir à la ville initiale et contre-attaquer l’armée japonaise, qui est alors désordonnée et dispersée. Cette stratégie va permettre de mettre en valeur l’avantage numérique de votre armée. Vous disposez pour cela d’une carte avec des villes et villages situés entre la côte et la ville de Shanghai, avec des routes entre les villes qui peuvent être empruntées dans les deux directions. Certaines villes et villages sont marqués, indiquant qu’ils sont favorables à une contre-attaque pour votre stratégie et sont donc des candidats pour devenir la ville initiale. Il est important de noter que plus le nombre de villes et villages à parcourir est élevé, plus vous allez perdre d’hommes lorsque vous allez battre en retraite. Vous devez donc trouver une ville efficace pour votre contre-attaque, qui fera perdre le moins d’hommes possible. A noter qu'il faut traverser au moins une ville autre que la ville candidate.
+Votre stratégie repose sur le nombre d’hommes que vous avez, bien supérieur à celui des Japonais.
+La région de Shanghai est composée de villes et de villages.
+
+Votre stratégie repose sur un mouvement calculé : établir une ligne de défense dans une ville clé, attendre l’arrivée des Japonais, puis battre en retraite à travers les villages et hameaux voisins, le tout pour revenir à la ville initiale.
+Cette stratégie va permettre de mettre en valeur l’avantage numérique de votre armée. Vous disposez pour cela d’une carte avec des villes et villages situés entre la côte et la ville de Shanghai, avec des routes entre les villes qui peuvent être empruntées dans les deux directions. Certaines villes et villages sont marqués, indiquant qu’ils sont favorables à une contre-attaque pour votre stratégie et sont donc des candidats pour devenir la ville initiale. Il est important de noter que plus le nombre de villes et villages à parcourir est élevé, plus vous allez perdre d’hommes lorsque vous allez battre en retraite.
+
+En tant que général chinois, c'est donc à vous trouver toutes les villes efficace pour votre contre-attaque. A noter qu'il faut traverser au moins une ville autre que la ville candidate.
 
 \begin{Input}
     L'entrée consiste en:
     \begin{itemize}
-        \item Une ligne avec trois entiers $n, m, p$ ($0\leq n, m\leq 300$) ($0 \leq p \leq \frac{n (n-1)}{2}$), le nombre de villes, le nombre de villes candidates et le nombre de chemins.
+        \item Une ligne avec trois entiers $n, m, p$ ($0\leq n, m\leq 300$) ($0 \leq p \leq \frac{n (n-1)}{2}$), le nombre de villes, le nombre de villes candidates et le nombre de chemins entre deux villes.
         \item Une ligne avec $m$ entiers $m_i$ ($0 \leq m \leq n$), les villes candidates.
         \item $p$ lignes avec deux entiers $u$, $v$ ($0 \leq u, v \leq n$), un chemin allant de la ville u à la ville v.
     \end{itemize}
 \end{Input}
 
 \begin{Output}
-    Les ville initiales qui correspondent au mieux à la stratégie.
+    \begin{itemize}
+        \item Un nombre $n$, le nombre de villes efficaces pour la contre-attaque.
+        \item Suivit de $n$ nombre, les villes initiales qui correspondent au mieux à la stratégie.
+    \end{itemize}
 \end{Output}
