--- a/second_sino_japanese_war/problem_statement/solution.fr.tex
+++ b/second_sino_japanese_war/problem_statement/solution.fr.tex
@@ -5,8 +5,9 @@
         \begin{block}{Problème}
             \textbf{Problem:} Un graphe avec $n$ villes et $m$ villes candidates, Trouver la ville candidate dont le cycle est le plus petit.
         \end{block}
-        \item<+-> Naive solution: Tester tout les chemins possibles pour chaque ville $\mapsto$ Trop lent.
-        \item<+-> DFS en postorder ???
+        \item<+-> Solution Naive: Tester tout les chemins possibles pour chaque ville $\mapsto$ Trop lent.
+        \textbf{Observation:} Une boucle peut s'exprimer comme une chemin de A à B et de B à A.
+        \textbf{Solution:} On fait un 0-1 bfs pour chaque ville candidate
     \end{itemize}
     % \solvestats
 \end{frame}
