war: update statement

--- a/second_sino_japanese_war/problem_statement/problem.fr.tex
+++ b/second_sino_japanese_war/problem_statement/problem.fr.tex
@@ -25,6 +25,7 @@ En tant que général chinois, c'est donc à vous trouver toutes les villes effi
         \item Une ligne avec $m$ entiers $m_i$ ($0 \leq m \leq n$), les villes candidates.
         \item $p$ lignes avec deux entiers $u$, $v$ ($0 \leq u, v \leq n$), un chemin allant de la ville u à la ville v.
     \end{itemize}
+    Il est garanti qu'une solution existe toujours
 \end{Input}
 
 \begin{Output}
