war: add more information about cylce

--- a/second_sino_japanese_war/problem_statement/problem.fr.tex
+++ b/second_sino_japanese_war/problem_statement/problem.fr.tex
@@ -13,7 +13,7 @@ Les Japonais disposent d’une plus grande puissance de feu, ainsi que d’un so
 Votre stratégie repose sur le nombre d’hommes que vous avez, bien supérieur à celui des Japonais.
 La région de Shanghai est composée de villes et de villages.
 
-Votre stratégie repose sur un mouvement calculé : établir une ligne de défense dans une ville clé, attendre l’arrivée des Japonais, puis battre en retraite à travers les villages et hameaux voisins, le tout pour revenir à la ville initiale.
+Votre stratégie repose sur un mouvement calculé : établir une ligne de défense dans une ville clé, attendre l’arrivée des Japonais, puis battre en retraite à travers les villages et hameaux voisins, le tout pour revenir à la ville initiale. Il est important de ne jamais retourner 2 fois au même endroit à l'exception de la ville initalie étant donné que ça donnerait un indice aux énemis.
 Cette stratégie va permettre de mettre en valeur l’avantage numérique de votre armée. Vous disposez pour cela d’une carte avec des villes et villages situés entre la côte et la ville de Shanghai, avec des routes entre les villes qui peuvent être empruntées dans les deux directions. Certaines villes et villages sont marqués, indiquant qu’ils sont favorables à une contre-attaque pour votre stratégie et sont donc des candidats pour devenir la ville initiale. Il est important de noter que plus le nombre de villes et villages à parcourir est élevé, plus vous allez perdre d’hommes lorsque vous allez battre en retraite.
 
 En tant que général chinois, c'est donc à vous trouver toutes les villes efficace pour votre contre-attaque. A noter qu'il faut traverser au moins une ville autre que la ville candidate.
