Add submission for Wifi & fix typos

--- a/wifi/problem_statement/problem.fr.tex
+++ b/wifi/problem_statement/problem.fr.tex
@@ -1,26 +1,23 @@
 \problemname{Wifi}
 
 \illustration{0.3}{vecteezy_wifi-icon-vector_.jpg}{
-
     CC BY-SA 4.0 by nemanja on \href{https://www.vecteezy.com/vector-art/4849448-wifi-icon-vector}{vecteezy}
 }
 
-\newcommand{\maxa}{123456789}
+En tant qu'opérateur téléphonique, vous devez être le plus performant et battre vos adversaires Koodo, Airtel, Rogers, Wind et AT\&T. Afin de réaliser à bien cette mission, il faut que votre réseau téléphonique soit le plus rapide possible. Votre réseau est composé de nombreuses antennes réparties sur un territoire. Lorsqu'un client souhaite se connecter à Internet, il est impératif de lui assigner l'antenne la plus proche pour garantir une connexion rapide et efficace. Par souci d'efficacité, toutes les antennes sont alignées sur un seul axe.
 
-En tant qu'opérateur téléphonique, vous devez être les plus performant et battre vos adversaires Koodo, Airtel, Rogers,Wind et AT\&T. Afin de réaliser à bien cette mission, il faut que votre réseau téléphonique soit le plus rapide possible. Votre réseau est composé de nombreuses antennes réparties sur un territoire. Lorsqu'un client souhaite se connecter à Internet, il est impératif de lui assigner l'antenne la plus proche pour garantir une connexion rapide et efficace. Par souci d'efficacitée, toutes les antennes sont allignées sur un seul axe.
-
-C'est votre devoir d'assigner les antennes au client !.
+C'est votre devoir d'assigner les antennes au client !
 
 \begin{Input}
-    L'entrée consiste en:
+    L'entrée consiste en :
     \begin{itemize}
         \item Une ligne avec deux entiers $n, q$ ($0\leq n, q\leq 10^5$), la taille de la liste ainsi que le nombre de requêtes.
         \item Une ligne avec $n$ entiers $a_i$ ($0  \leq a_i \leq 10^{18}$), la position des antennes.
         \item $q$ lignes avec un entier $p$ ($0 \leq p \leq 10^{18}$). La position du client.
     \end{itemize}
-    Il est garanti que chaque antenne à une position unique !
+    Il est garanti que chaque antenne est placée sur une unique position !
 \end{Input}
 
 \begin{Output}
-    L'antenne la plus proche pour chaque requête. Si jamais deux antennes sont à équidistance alors affichez n'importe quelle antenne.
+    L'antenne la plus proche pour chaque requête. Si deux antennes sont équidistantes, alors affichez n'importe quelle antenne.
 \end{Output}
