Add submissions to Star & fix typos

--- a/star/problem_statement/problem.fr.tex
+++ b/star/problem_statement/problem.fr.tex
@@ -10,9 +10,9 @@
 En tant que président du KARWA, le fameux Klan des Assoiffés Rassemblés pour le Whisky et l'Apéro, vous vous retrouvez avec une montagne de bacs vides. Rémi, le responsable des bacs, décide d'en faire une immense sculpture. Cependant, il manque d'inspiration pour choisir une forme... 
 C'est alors que vous avez une idée de génie : construire une étoile géante ! Mais un problème se pose : quelle sera la taille de cette étoile ?
 
-En effet, vous ne voulez pas viser trop grand et ne pas pouvoir terminer l'étoile completement.
+En effet, vous ne voulez pas viser trop grand et ne pas pouvoir terminer l'étoile complètement.
 
-C'est là que vous intervenez, Votre rôle est de déterminer la taille de l'étoile en fonction du nombre de bacs disponibles.
+C'est là que vous intervenez. Votre rôle est de déterminer la taille de l'étoile en fonction du nombre de bacs disponibles.
 
 La taille d'une étoile est la distance la plus longue entre son centre et l'extrémité de l'une de ses branches.
 
@@ -25,12 +25,9 @@ La taille d'une étoile est la distance la plus longue entre son centre et l'ext
 
 
 \begin{Input}
-    The input consists of:
-    \begin{itemize}
-        \item Une ligne avec un entier $n$ ($0\leq n\leq \maxn$), le nombre de bac.
-    \end{itemize}
+    L'input consiste en une seule ligne avec un entier $n$ ($0\leq n\leq \maxn$), le nombre de bac.
 \end{Input}
 
 \begin{Output}
-    La taille maximale de l'étoile.
+    Un entier représentant la taille maximale de l'étoile.
 \end{Output}
