--- a/star/problem_statement/problem.fr.tex
+++ b/star/problem_statement/problem.fr.tex
@@ -5,7 +5,7 @@
 }
 
 % optionally define variables/limits for this problem
-\newcommand{\maxn}{10^18}
+\newcommand{\maxn}{10^{18}}
 
 En tant que président du KARWA, le fameux Klan des Assoiffés Rassemblés pour le Whisky et l'Apéro, vous vous retrouvez avec une montagne de bacs vides. Rémi, le responsable des bacs, décide d'en faire une immense sculpture. Cependant, il manque d'inspiration pour choisir une forme... 
 C'est alors que vous avez une idée de génie : construire une étoile géante ! Mais un problème se pose : quelle sera la taille de cette étoile ?
