typo in the output format requested

--- a/caverne/problem_statement/problem.fr.tex
+++ b/caverne/problem_statement/problem.fr.tex
@@ -28,5 +28,5 @@ On considère que si la hauteur du plafond et celle du plancher sur le même mè
 \end{Input}
 
 \begin{Output}
-    La capacité en litre de la caverne.
+    Le volume de la caverne.
 \end{Output}
