fix typo in input format

--- a/caverne/problem_statement/problem.fr.tex
+++ b/caverne/problem_statement/problem.fr.tex
@@ -10,7 +10,7 @@ Vous êtes un spéléologue et votre métier est d'étudier les Kryptes Antiques
 \begin{itemize}
 \item Trois entiers $h$, $l$ et $p$ représentant la hauteur, la longueur et la profondeur d'un parallélépipède rectangle représentant la zone scannée.
 \item Une matrice de taille $l\times p$ représentant la topographie du plafond, chaque entrée coefficient étant la hauteur du plafond en partant du haut du parallélépipède de $1m^2$.
-\item Une matrice de taille $l\times p$ représentant la topographie du sol, chaque entrée coefficient étant la hauteur du sol en partant du haut du parallélépipède de $1m^2$.
+\item Une matrice de taille $l\times p$ représentant la topographie du sol, chaque entrée coefficient étant la hauteur du sol en partant du bas du parallélépipède de $1m^2$.
 \end{itemize}
 
 On considère que si la hauteur du plafond et celle du sol sur le même mètre carré se croisent (autrement dit, leur somme est plus grande que la hauteur du parallélépipède) alors la caverne forme un pilier et ne peut donc pas accueillir d'eau à cet endroit.
