--- a/lettre/problem_statement/problem.fr.tex
+++ b/lettre/problem_statement/problem.fr.tex
@@ -18,9 +18,9 @@ Les kiwis étant des animaux peu conscients de leur propre bêtise, il est possi
 \begin{Input}
     L'entrée consiste en :
     \begin{itemize}
-        \item une ligne contenant l'entier $1 \leq c \leq n$, le nombre total de carrefours dans la ville où vous travaillez,
+        \item une ligne contenant l'entier $1 \leq c \leq 10^5$, le nombre total de carrefours dans la ville où vous travaillez,
         \item un ligne contenant l'entier $0\leq d < c$, le carrefour où se trouve votre bureau de poste.
-        \item une ligne contenant l'entier $0 \leq r \leq n$, le nombre de rues.
+        \item une ligne contenant l'entier $0 \leq r \leq 10^5$, le nombre de rues.
         \item $r$ lignes contenant deux entiers $0\leq a,b < c$, indiquant qu'une rue relie les carrefours $a$ et $b$.
     \end{itemize}
 \end{Input}
