Add new problem : Artefacts

--- a/caverne/problem_statement/problem.fr.tex
+++ b/caverne/problem_statement/problem.fr.tex
@@ -18,7 +18,7 @@ On considère que si la hauteur du plafond et celle du sol sur le même mètre c
 \begin{Input}
     L'input consiste en :
     \begin{itemize}
-        \item Une ligne avec les trois entiers $1 \leq h, l, p \leq 1000$.
+        \item Une ligne avec les trois entiers $h$, $l$ et $p$ ($1 \leq h, l, p \leq 1000$), représentant respectivement la hauteur, la longueur et la profondeur de la caverne.
         \item $l$ lignes, chacune contenant $p$ entiers entre $0$ et $h$, pour la matrice représentant la topographie du plafond.
         \item $l$ lignes, chacune contenant $p$ entiers entre $0$ et $h$, pour la matrice représentant la topographie du sol.
     \end{itemize}
