un peu plus clair

--- a/evasionaquatique/problem_statement/problem.fr.tex
+++ b/evasionaquatique/problem_statement/problem.fr.tex
@@ -8,7 +8,7 @@ Le KARWA (Kanalisation Aquatic Route for Wayward Adventurers) est un réseau com
 
 Aujourd'hui, c'est le jeune Nemo qui s'est égaré dans ce dédale de tuyaux et il a besoin de votre aide pour rejoindre l'océan, mais certaines intersections de tuyaux sont soumises à des courants perturbateurs qui modifient son effort de nage.
 
-Nemo peut se déplacer horizontalement ou verticalement dans le réseau, cela lui prend initialement $1$ minute de nage par unité de distance. Mais lorsqu'il passe dans une intersection perturbatrice, l'effort nécessaire pour en sortir ajoute $3$ minutes au trajet.
+Nemo peut se déplacer horizontalement ou verticalement dans le réseau, cela lui prend initialement $1$ minute de nage par unité de distance. Mais lorsqu'il passe dans une intersection perturbatrice, l'effort nécessaire pour en sortir ajoute $3$ minutes au trajet (donc $4$ minutes au total pour s'échapper d'une perturbation).
 
 Nemo connaît sa position initiale $(i_s, j_s)$ et la position de la sortie $(i_t, j_t)$. Il veut y arriver le plus vite possible.
 
