Fix symlink, typos, warnings, etc

--- a/artefact/problem_statement/solution.fr.tex
+++ b/artefact/problem_statement/solution.fr.tex
@@ -25,6 +25,8 @@
     \begin{block}{Solution similaire : Memo\"isation (top-down)}
        On définit une fonction récursive \texttt{solve(i,j)} jouant le rôle $DP[i][j]$ et on retient via mémoïsation les paires $(i,j)$ déjà traitées. Il suffit ensuite d'appeler $solve(0,n-1)$.
     \end{block}
+    \pause
+    Complexité ces solutions : $\mathcal{O}(n^3)$.
 
     %\pause\solvestats
 \end{frame}
