--- a/gareexpress/problem_statement/solution.fr.tex
+++ b/gareexpress/problem_statement/solution.fr.tex
@@ -5,10 +5,10 @@
     \end{block}
     \pause
     \begin{itemize}[<+->]
-        \item Calculer et afficher $\lceil \frac{N}{X} \rceil \times X$ : $\mathcal{O}(1)$.
+        \item Calculer et afficher $\lceil N/X \rceil \times X$ en $\mathcal{O}(1)$.
         \item En une ligne Python :
         \[
-        \texttt{print((lambda N,X:-N\%X+N)(int(input()),int(input())))}
+        \texttt{print((lambda N,X:-N \% X + N)(int(input()), int(input())))}
         \]
     \end{itemize}
 
