Add a few random test cases for artefact and war, fix my solution for war

--- a/secondsinojapanesewar/problem_statement/problem.fr.tex
+++ b/secondsinojapanesewar/problem_statement/problem.fr.tex
@@ -20,8 +20,8 @@ En tant que général chinois, c'est donc à vous de trouver toutes les villes e
     L'entrée consiste en :
     \begin{itemize}
         \item Une ligne avec trois entiers $n, m, p$ ($1 \leq n, m\leq 301$) ($1 \leq p \leq \frac{n (n-1)}{2}$), le nombre de villes, le nombre de villes candidates et le nombre de chemins entre deux villes.
-        \item Une ligne avec $m$ entiers $m_i$ ($0 \leq m \leq n$), les villes candidates.
-        \item $p$ lignes avec deux entiers $u$, $v$ ($0 \leq u, v \leq n$), un chemin allant de la ville u à la ville v.
+        \item Une ligne avec $m$ entiers $m_i$ ($0 \leq m < n$), les villes candidates.
+        \item $p$ lignes avec deux entiers $u$, $v$ ($0 \leq u, v < n$), un chemin allant de la ville u à la ville v.
     \end{itemize}
     Il est garanti qu'une solution existe toujours.
 \end{Input}
